@@ -11,6 +11,9 @@ Sun Dec 16 16:42:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>
         * examples/IPC_SAP/UPIPE_SAP/ex1.cpp:
         * examples/IPC_SAP/UPIPE_SAP/ex2.cpp:
         * examples/IPC_SAP/UPIPE_SAP/ex3.cpp:
+        * examples/Log_Msg/test_callback.cpp:
+        * examples/Log_Msg/test_log_msg.cpp:
+        * examples/Log_Msg/test_ostream.cpp:
 
           Made these examples compiling when ACE_USES_WCHAR is set
 
